tests/bad/static_member_invalid_struct.oc
/// fail: Couldn't find this identifier

def main() {
    Bar::foo()
}